Docs de-bloated (HANDOFF §45) and the popover family specified (POPOVER.md, HANDOFF §46)
The pass over every doc and the memory directory: repo docs 1,174 KB → 866 KB with every
number, grade, date, decision, rule, trap and section number kept; zero headings lost against
the previous HEAD, zero qualified section references newly dangling, lint 0, core 525 /
desktop 15 green. Battery counts and four stale facts corrected in passing.

POPOVER.md: the spec for one popover family (menu · notice · confirm · peek · deck · ask) on
one modal stack, and the Claude path that rides it (deck.v1, damage-show, a user-level skill,
~/.damage/decks/ as a Files location). Adam's rulings 2026-09-11/12: a popover, not a window;
no dimming behind it; banners out; width per app; stacking yes; built all at once. DESIGN §0
records the reversal of the generic-overlay exclusion; §4.11 is the design summary. Not built.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KCTbCwwSYKp5XjD82tWMid